--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 PORT = 3000
 MONGO_URI = mongodb://0.0.0.0/soen
 JWT_SECRET=soen_secret
+REDIS_HOST=redis-14971.crce179.ap-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT=14971
+REDIS_PASSWORD=TX3zrSpTthxFrauIThWAVZ1hfseJncuD
